Fix build on JDKs greater than 8